--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,12 +25,23 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+    - name: Setup Node.js environment
+      uses: actions/setup-node@v2.4.1
+      with:
+        version: 12
+        
+    - name: GitHub Action for Yarn
+    uses: Borales/actions-yarn@v2.3.0
+   with:
+   
+    cmd: install
+    
+    - name: creating build
+      uses: yarn build
+      
+      - name: installing surge
+      uses: npm install -g surge
+      
+      - name: deploying on surge
+      uses: surge ./build http://qasimbootcamp2020assignment2.surge.sh/ --token ${{secrets.SURGEA2}}
