--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,26 +1,13 @@
-# This is a basic workflow to help you get started with Actions
+name: Deploy
 
-name: CI
-
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    branches: [ master ]
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     - uses: actions/checkout@v2
 
@@ -33,12 +20,8 @@ jobs:
       run: |
         npm install # Install Dependencies
         CI=false npm run build # CI=false to ignore warnings
-    
-    - name: creating build
-      uses: yarn build
-      
-      - name: Install Surge
+    - name: Install Surge
       run: npm install -g surge
 
     - name: Deploy to Surge
-      run:  surge ./build http://qasimbootcamp2020assignment2.surge.sh/ --token ${{secrets.SURGEA2}}
+      run:  surge ./build http://qasimbootcamp_2020_assignment2.surge.sh/ --token ${{secrets.SURGEA2}}
